Fixed quick weapons/consumables sections' spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,6 +36,13 @@
   text-align: justify;
 }
 
+.flush-above {
+  margin-top: 0px;
+}
+.flush-below {
+  margin-bottom: 0px;
+}
+
 /* Distinct tiles w/in sheet (here so functionality can be used by multiple pages) */
 .grid-container * {
   box-sizing: border-box;
@@ -75,6 +82,9 @@
 }
 .col-1_4 {
   width: calc(100% / 4);
+}
+.col-1_6 {
+  width: calc(100% / 6);
 }
 .col-1_10 {
   width: calc(100% / 10);
